# closed-loop-gain-control

./: .gitignore  .project  .pydevproject  README.md  TODO.txt  amplifier_model.py  build_opencv_static_min.sh  line_changing_model.py  signal_generator.py  synteser_fir.py  test_diff.py
Plans/: docs.txt  think.txt
Report/: U1p1.odt  U1p2.odt  Копия U1p2.doc
Report/p1/odg/: lpc.odg
Report/ppt/done/: ysfc.ods
Report/src_offo/: celp.odg
Report/src_offo/append/: Thumbs.db
Report/src_offo/vc/: toModel.odg
Results/: j_en_sq.ods
Results/pairs/: j_ru_vq.ods  m_ru_sq.ods
apps/gain-loop-app/: README.md~
apps/gain-loop-app/tests/: test-finder-curve.py
code-miners/: README.md
code-miners/domain/: code.txt
code-miners/projects/asm-code-analyser/: README.md
code-miners/projects/mkt-processors/: README.md  bat.bat
code-miners/projects/prepro/: README.md  bat.bat  planthi.xml
code-miners/projects/pysnmp-generators/: README.md  hided.py  template_gen.py  util.py
code-miners/projects/web_tools/: .project  .pydevproject  bugtracker-to-utf.py  id_extractor.py  settings_rpter.py  tf-to-npp.py
code-miners/source/regexs/: checker_dem_law.txt  test.cc  used-regex-web.txt
code_trash/R/: 3.doc  clast_selfdata.R  new.rar  test.r  y.doc  yy2.doc
code_trash/dsp/: myfft.py
code_trash/mlab/src/: bitroute.m
code_trash/mm_ml/gener/: rom_inv.m  rom_pow.m  rs_255_pow.vec
code_trash/mm_ml/gmult/: main.m  main_goper.m
code_trash/mm_ml/ml_rs_model_xxbm/: bm.m  lambda.mat  lambdas.mat  main.asv  ml_low.bat  omegas.mat  pribm.m  rs_255_full8_roots.vec  rs_drm_tb.vec  rs_sym_dvbt_er.mif  sindroms.mat
codecs/develop-report/ppt/: adapt_for.odg  ppt.txt  present_97.ppt
codecs/develop-report/raw/: U1.odt  U1end.doc  U1end.odt  U1p1.doc
codecs/develop-report/rest/: appendix.doc  my_bshd.doc  ТЭО мое_my.doc
codecs/develop-report/theory/: buf.doc
codecs/release-report/: Lugansky-Igor.doc  summary.doc
codecs/results/: m_en_sq.ods  m_en_vq.ods  m_ru_sq.ods  m_ru_vq.ods
codecs/train-data/: cecelp_sq.mdl
codecs/train-data/Russian_5_Travel_by_Train_8k16mo/: lsf.mat
codecs/train-data/bbc_6_minute_8k16mo/: lsf.mat
codecs/train-data/forge/: f10.sqd  f5.sqd  f7.sqd  f9.sqd  loadLsf.asv  loadLsf.m  tr.m  ws1024ru.mat  ws2wav.m
data_mining/R/: 9.docx  lab3_selfdata.csv  t_v2.ppt  treelab3.csv
develop-report/: hier_3-9-1-0.txt
develop-report/raw/src_offo/: Thumbs.db
develop-report/theory/: ref&input&output.doc
develop-report/theory/p1/: endU1.doc
docs/experiments/: j_ru_sq.ods
docs/experiments/pairs/: j_ru_sq.ods
docs/ppt/: ppt.ppt  present_97.ppt
docs/ppt/tmp/: Thumbs.db
docs/src_offo/: .~lock.lpc.odg#  wave.xcf
docs/src_offo/p2/: Thumbs.db
docs/src_offo/vc/: lpcfilter.odg
done/: U1.doc  U1op.odt  U1p2.doc
hided/codecs/py/: spec_analyse.py
hided/codecs/release-report/: experiments.doc
hided/codecs/results/: j_en_vq.ods  j_ru_vq.ods
identification_tools/app_math/: __init__.py
identification_tools/dals/os_io/: ReadMe.txt
identification_tools/hided/: app-zero-point.py
identification_tools/tests/: test-process-afilters.py
identification_tools/visualisers/: __init__.py
impls/: README.md  purge_git_history.txt
impls/lin_kern_ibm/: useful.txt
impls/projects/mc-assistant/projects/c89_c99_scheduler/: CMakeLists.txt
impls/projects/mc-assistant/projects/c89_c99_scheduler/doc/: troubles.txt
impls/projects/mc-assistant/projects/c89_c99_scheduler/source/time_triggered_arch/: config.h
impls/projects/mc-assistant/projects/c89_c99_scheduler/source/time_triggered_arch/logical_devices/: dvrOnBoardPreaml.c  dvrOnBoardPreaml.h
impls/projects/mc-assistant/projects/c89_c99_scheduler/source/time_triggered_arch/scheduler/: coOperativeScheduler.c  cooperativeScheduler.h
impls/projects/mc-assistant/projects/c89_c99_scheduler/source/time_triggered_arch/scheduler_raw/: main.h  sch51.c  sch52.h
impls/projects/mc-assistant/projects/c89_c99_scheduler/source/time_triggered_arch/tasks/: offChain.c  onChain.c  onChain.h
impls/projects/mc-assistant/projects/c89_c99_scheduler/source/time_triggered_arch/vm/: virtualDvrPreampl.c  virtualDvrPreampl.h  vm.c  vm.h
impls/projects/mc-assistant/projects/c89_c99_scheduler/tests/: coOperativeSchedulerTest.cc
impls/simd/: Makefile  main.cc
machine_learning/: knowl_deps.txt
machine_learning/R/: gnu-r-example.csv  output_gnu-r-example.csv  r-example-function-1.R
machine_learning/octave-boost/: cuda_ext.m  cuda_ext.m~
ml/: README.md
nlp/: README.md
nlp/knowl/: notes.txt
opencv/: .cproject  CMakeLists.txt  Makefile  blur.cc  blur_compare  blur_compare.cc  cimg_to_slow.cc  s10.cc  s4  s4.cc  s5  s5.cc  s7  s7.cc  w1  w1.cc
project/sl701/: bat.bat  init.m
sandbox/ng-003/: danger.txt
speech-codecs/: trouble_train_data.txt
speech-codecs/results/: results.txt
src/: amplifier_model.py  app-digital-filters.py  app-finder-curve.py  app-first-generation.py  app-optimizer.py  app-plot-analog-filters.py  app-stability-afilter.py  app-top.py  app-zero-point.py  app.py  app_digital_filters.py  app_first_generation.py  app_plot_analog_filters.py  source_rpt.csv  source_rpt1.csv  stability_afilter.py  test-dfilters.py  test-process-afilters.py
src/app_math/: __init__.py  map_tbls.py  simple_math_operators.py
src/dals/: README.md
src/dsp_modules/: signal_generator.py
src/hided/: app-cleaner.py  compilation_code.py
src/iir_models/: __init__.py  dig_fil.py  digital_filters.py  iir_digital.py  irr_filter_design.py  plot_analog_filters.py  second_try.py  test_iir_filters.py
src/measure_processors/: __init__.py
src/opimizers/: __init__.py  finder-clean.py  finder.py
src/visualisers/: __init__.py
train-data/forge/: f2.sqd  f8.sqd  untitled.mat
(+604 files in other folders)
